добавил логирование, базовое добавление todo-шек, продемонстрировал усложнение 1 и 2 с помощью leak canary

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".LeakDemoActivity"
+            android:exported="false"
+            android:label="Leak Demo"
+            android:theme="@style/Theme.TodoApp" />
     </application>
 
 </manifest>
